# phc

./: ProjectHome.md
phc/trunk/: Makefile.am  Makefile.in  acinclude.m4  config.h.in  configure  configure.ac
phc/trunk/doc/: STATUS
phc/trunk/doc/dev_manual/: configure.html  demo.html  generatedcode.html  gettingstarted.html  grammar.html  index.html  limitations.html  maketeatheory.html  representingphp.html  tutorial1.html  tutorial2.html  tutorial3.html  tutorial4.html  tutorial5.html  tutorial6.html
phc/trunk/doc/manual/: Makefile  devintro.sgml  generatedcode.sgml  gettingstarted.sgml  grammar.sgml  install.sgml  maketeatheory.sgml  manual.dsl  manual.sgml  representingphp.sgml  runningphc.sgml  treetutorial1.sgml  treetutorial2.sgml  treetutorial3.sgml  treetutorial4.sgml  treetutorial5.sgml  treetutorial6.sgml
phc/trunk/doc/user_manual/: index.html  install.html  runningphc.html
phc/trunk/misc/: Doxyfile  logs.php  run_nightly.php
phc/trunk/phc/: Tree_transform.h  Tree_visitor.h  ast.h  parse.h
phc/trunk/phc/lib/: AttrMap.h  Boolean.h  Integer.h  List.h  Object.h  String.h  base64.h  demangle.h
phc/trunk/phc/process_ast/: DOT_unparser.h  PHP_unparser.h  Process_includes.h  Remove_concat_null.h  Visit_everything.h  XML_unparser.h
phc/trunk/plugins/tests/: Collect_all_pointers.h  canonical_unparser.cpp  cloning.cpp  line_numbers.cpp  linear.cpp  pre_vs_post_count.cpp  source_vs_semantic_values.cpp  xml_roundtrip.cpp
phc/trunk/plugins/tools/: purity_test.cpp
phc/trunk/plugins/tutorials/: Comment_ifs.cpp  Expand_includes.cpp  InsertDB.cpp  MySQL2DBX.cpp  count_classes.cpp  count_function_calls_difficult.cpp  count_function_calls_easy.cpp  count_statements.cpp  helloworld.cpp  show_traversal_order.cpp
phc/trunk/src/: phc.cpp  phc_compile_plugin.in
phc/trunk/src/codegen/: Generate_C.cpp  Generate_C.h  Prep.cpp  Prep.h
phc/trunk/src/generated_src/: lex.yy.cc-yyFlexLexer.patch  phc.ggo  phc.tea  php.gperf  php_dot.ypp  php_parser.ypp  php_scanner.lex
phc/trunk/src/lib/: AttrMap.cpp  AttrMap.h  Boolean.cpp  Boolean.h  Integer.cpp  Integer.h  List.h  Object.cpp  Object.h  String.cpp  String.h  base64.cpp  base64.h  demangle.cpp  demangle.h  error.cpp  error.h
phc/trunk/src/parsing/: PHP_context.cpp  PHP_context.h  XML_parser.cpp  XML_parser.h  parse.cpp  parse.h
phc/trunk/src/process_ast/: DOT_unparser.cpp  DOT_unparser.h  Invocation_targets.cpp  Invocation_targets.h  PHP_unparser.cpp  PHP_unparser.h  Process_includes.cpp  Process_includes.h  Remove_concat_null.cpp  Remove_concat_null.h  Remove_parser_temporaries.cpp  Remove_parser_temporaries.h  Token_conversion.cpp  Token_conversion.h  Variable_targets.cpp  Variable_targets.h  Visit_everything.cpp  Visit_everything.h  XML_unparser.cpp  XML_unparser.h  Zend_style_unparser.cpp  Zend_style_unparser.h  process_ast.cpp  process_ast.h
phc/trunk/src/tools/maketea/: Contexts.hs  DeepEquality.hs  FactoryMethod.hs  GrammarAnalysis.hs  MakeTea.hs  MakeTeaCpp.hs  MakeTeaParser.hs  Makefile  STATUS  TreeVisitor.hs
phc/trunk/test/: README.test
phc/trunk/test/framework/: basic_parse_tests.php  compile_plugin_test.php  compile_time_include.php  compiled_vs_interpreted.php  driver.php  interpret_canonical_unparsed.php  interpret_unparsed.php  line_numbers.php  parse_ast_dot.php  regression_dump_ast.php  regression_dump_includes.php  regression_dump_php.php  reparse_unparsed.php  source_vs_semantic_values.php  xml_roundtrip.php
phc/trunk/test/framework/lib/: autovars.php.in  header.php  labels.php  no_subject_test.php  plugin_test.php  regression.php  startup.php  support_file_test.php  test.php  two_command_test.php
phc/trunk/test/subjects/: labels
phc/trunk/test/subjects/general/: casts.php
phc/trunk/test/support_files/regression_dump_ast/bugs/: bug0001.php.dot  bug0009b.php.dot  bug0011.php.32bit.dot  bug0012.php.dot  bug0013.php.dot  bug0013b.php.dot  bug0015.php.dot  bug0018.php.dot
phc/trunk/test/support_files/regression_dump_ast/dynamic/: dynamic_class.php.dot  dynamic_method.php.dot
phc/trunk/test/support_files/regression_dump_ast/general/: abstractmethods.php.dot  arrays.php.dot  attributes.php.dot  backtick.php.dot  binops.php.dot  casts.php.dot  class_modifiers.php.dot  comments.php.dot  continue.php.dot  do.php.dot  empty.php.dot  exceptions.php.dot  for.php.dot  foreach.php.dot  functions.php.dot  functiontarget.php.dot  global.php.dot  if.php.dot  include_complex.php.dot  included_classes_and_functions.php.dot  included_classes_with_return_values.php.dot  included_recursive1.php.dot  included_recursive2.php.dot  included_recursive3.php.dot  included_use_existing_vars.php.dot  included_use_vars_in_classes.php.dot  included_use_vars_in_function.php.dot  included_var_overwrite.php.dot  included_with__FILE__.php.dot  instanceof.php.dot  instring.php.dot  isset.php.dot  line_and_co.php.dot  new.php.dot  precedence.php.dot  refs.php.dot  return.php.dot  static.php.dot  stringescape.php.dot  switch.php.dot  (+5 more)
phc/trunk/test/support_files/regression_dump_ast/horrible/: ifscope.php.dot  invocation_priorities.php.dot  method_invocation.php.dot  obfuscated_foreach.php.dot  static_member_invocation.php.dot  whilescope.php.dot
phc/trunk/test/support_files/regression_dump_includes/general/: include_complex.php.unparsed
phc/trunk/test/support_files/regression_dump_php/bugs/: bug0001.php.unparsed  bug0003.php.unparsed  bug0004.php.unparsed  bug0006.php.unparsed  bug0007.php.unparsed  bug0012.php.unparsed  bug0013.php.unparsed  bug0013b.php.unparsed  bug0017.php.unparsed  bug0018.php.unparsed  bug0021.php.unparsed
phc/trunk/test/support_files/regression_dump_php/codegen/: 004.php.unparsed  005.php.unparsed  006c.php.unparsed  009.php.unparsed  013b.php.unparsed  013c.php.unparsed  017b.php.unparsed
phc/trunk/test/support_files/regression_dump_php/dynamic/: dynamic_function.php.unparsed
phc/trunk/test/support_files/regression_dump_php/general/: abstractmethods.php.unparsed  allchars_inline.php.unparsed  assignments.php.unparsed  backtick.php.unparsed  binarystrings.php.unparsed  refs.php.unparsed  (+26 more)
(+77 files in other folders)
